deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokemon-finder-aymeric
  namespace: aymeric
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/aymeric: pokemon-finder-aymeric
  template:
    metadata:
      labels:
        app.kubernetes.io/aymeric: pokemon-finder-aymeric
    spec:
      containers:
      - name: pokemon-finder
        image: europe-west9-docker.pkg.dev/infal-devops-sysops/student-aymeric/pokemon-finder
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
