service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-pokemonfinder
  namespace: aymeric
spec:
  selector:
    app.kubernetes.io/aymeric: pokemon-finder-aymeric
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
